--- a/static/css/header.css
+++ b/static/css/header.css
@@ -1,4 +1,4 @@
-:root{
+:root {
     --cerise: #e83d84;
     --cerise-light: #ec5f99; /*rgba(232,19,108,0.8);*/
     --grey: rgba(69, 69, 69, 1);
@@ -9,7 +9,7 @@
 header {
     background-color: var(--grey);
     border: 0em;
-    border-bottom: 0.5em;
+    border-bottom: 0.3em;
 	border-style: solid;
 	border-color: var(--cerise);
     position: fixed;
@@ -17,53 +17,49 @@ header {
     width: 100%;
 }
 
-#ddagen-logo-header {
-    height: 1.5em;
-    margin: 2%;
-}
-
-.navigation-bar {
-    overflow: hidden;
-}
-
-.navigation-bar a {
-    float: left;
-    color: #f2f2f2;
+#navbar {
+    display: grid;
+    align-items: center;
+    grid-template-columns: 99fr 1fr;
     padding: 1%;
 }
 
-.navigation-bar a.active {
+#navbar.responsive {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    overflow: visible;
+}
+
+.navbar-item {
+    background-color: var(--grey);
+    float: left;
+    color: #f2f2f2;
+    padding: 1%;
+    display: none;
+}
+
+.navbar-item.active {
     background-color: #04AA6D;
     color: white;
 }
 
-.navigation-bar a:not(:first-child) {
-    display: none;
-}
-
-#header-hamburger {
-    display: block;
-    position: absolute;
-    right: 0;
-    top: 0;
-}
-
-.navigation-bar.responsive {
-    position: fixed;
-    top: 0;
-    width: 100%;
-}
-
-.responsive #header-hamburger {
-    position: absolute;
-    right: 0;
-    top: 0;
-}
-
-.navigation-bar.responsive a {
+#navbar.responsive .navbar-item {
     float: none;
     display: block;
     text-align: left;
+}
+
+#header-hamburger {
+    background-color: transparent;
+    justify-content: right;
+    padding: 0%;
+    /* width: 200px; */
+}
+
+#ddagen-logo-header {
+    height: 2em;
+    color: white;
 }
 
 /* For everything larger than mobile */
@@ -71,32 +67,28 @@ header {
 
     header {
         font-size: 2rem;
-        display: flex;
-        align-items: center;
         background-color: var(--grey-transparent);
     }
 
-    .navigation-bar #header-hamburger {
+    #navigation-bar #header-hamburger {
         display: none;
     }
 
-    .navigation-bar a:not(:first-child) {
+    #navigation-bar a:not(:first-child) {
         display: block;
     }
 
-    .navigation-bar a {
+    #navigation-bar a {
+        height: 100%;
         padding: 0.5% 0.5% 0.5% 0.5%;
     }
 
-    .navigation-bar a:hover{
+    #navigation-bar a:hover{
         background-color: var(--hover-color);
     }
 
     #ddagen-logo-header {
-        height: 1.5em;
-        margin: 0em;
-        margin-left: 1%;
-        margin-right: 1%;
+
     }
 
     #language {
